--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<canvas id="my-canvas"></canvas>
+	<canvas width="600" height="400" id="my-canvas"></canvas>
+	<!-- <video width="600" height="400" id="my-video" src=""></video> -->
+
+	<p style="color: white; pointer-events: none;">By Moein</p>
 
 	<script src="script.js"></script>
 </body>
